Modules loader no longer wraps if the screen is too wide

--- a/_css/modules/modules.scss
+++ b/_css/modules/modules.scss
@@ -25,7 +25,8 @@ $modulesBorderRadius: 10px;
 
     .faux-slide-container {
 
-        width: 3000px;
+        // width: 3000px;
+        white-space: nowrap;
 
         .faux-slide-wrapper {
             display: table;
